# radiant-smartcharging

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  config.example.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_compatibility.md  feature_request.md
.github/workflows/: ci.yml  release.yml
android/: build.sh  install.sh  rsc.rc
docs/: ANALYSIS.md  AUDIT.md  KERNEL_FLIP_DEBUG.md  TROUBLESHOOTING.md
selinux/: README.md  check_cil.py  file_contexts.patch  install.sh  rsc.cil  vendor_file_contexts.patched  vendor_sepolicy.cil.patched
src/: battery.rs  config.rs  logger.rs  main.rs  mtk.rs  uevent.rs
tests/: config_test.rs
